--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
     </head>
 
     <body>
+      <nav class="navbar navbar-inverse bg-inverse">
+           <%= image_tag "tag.png", :class => 'navbar-brand', :id => 'brand'%>
+           <%= link_to "All Products", products_path, :class => 'navbar-brand' %>
+           <%= link_to "Add Product", new_product_path, :class => 'navbar-brand' %>
+
+         </nav>
+
       <%= yield %>
       <%= flash[:alert] %>
       <%= flash[:notice] %>
