--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
     <body>
       <nav class="navbar navbar-inverse bg-inverse">
-           <%= image_tag "tag.png", :class => 'navbar-brand', :id => 'brand'%>
+           <!-- <%= image_tag "tag.png", :class => 'navbar-brand', :id => 'brand'%> -->
            <%= link_to "All Products", products_path, :class => 'navbar-brand' %>
            <%= link_to "Add Product", new_product_path, :class => 'navbar-brand' %>
 
