--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Products</h1>
-
-<ul>
   <% @products.each do |product| %>
-    <li><%= link_to product.name, product_path(product) %> </li>
-  <% end %>
-</ul>
 
-<hr>
-<%= link_to "All Products", products_path %> |
-<%= link_to "New Product", new_product_path %>
+<div class="col-md-4">
+  <div class="well2">
+    <%= link_to image_tag(product.image), product_path(product), :class => "image-resize" %>
+    <h4><span class="titles"><%= link_to product.name, product_path(product) %><span></h4>
+    <h4>$<%= product.cost %></h4>
+    <h5><%= link_to "View Details", product_path(product) %></h5>
+  </div>
+</div>
+<% end %>
