--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,15 @@
-<h1>Products</h1>
+<h1>Home</h1>
+
+<h4>Welcome to Timbuk3 the official site for custom made bags.</h4>
+
+<h2>Products</h2>
   <% @products.each do |product| %>
 
 <div class="col-md-4">
   <div class="well2">
     <%= link_to image_tag(product.image), product_path(product), :class => "image-resize" %>
-    <h4><span class="titles"><%= link_to product.name, product_path(product) %><span></h4>
-    <h4>$<%= product.cost %></h4>
+    <h4><span class="titles"><%= link_to product.name %><span></h4>
+    <h4><span class="red">$</span><%= link_to product.cost, product_path(product)%></h4>
     <h5><%= link_to "View Details", product_path(product) %></h5>
   </div>
 </div>
