--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,11 +4,11 @@
   <%= link_to "Edit Product", edit_product_path(@product) %> |
   <%= link_to "Remove Product", product_path(@product),:data => {:confirm => "Are you sure?",:method => "delete"} %>
   <div class="well">
-    <h1><%= @product.name %> </h1>
-    <h5><%= @product.description %></h5>
-    <h4><%= @product.origin %></h4>
-    <h4>$<%= @product.cost %></h4>
-    <h4>Style: <%= @product.style %></h4>
+    <h1><span class="black"><%= @product.name %></span></h1>
+    <h5><span class="black"><%= @product.description %></span></h5>
+    <h4><span class="black"><%= @product.origin %></span></h4>
+    <h4><span class="black">$<%= @product.cost %></span></h4>
+    <h4><span class="black">Style: <%= @product.style %></span></h4>
     <h4><%= image_tag @product.image %></h4>
   </div>
 </div>
