--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>Edit Product</h1>
-
-<%= render "form" %>
+<div class="col-md-12">
+  <div class="edit-form well">
+    <h1><span class="black">Edit Product</span></h1>
+    <%= render "form" %>
+  </div>
+</div
