--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,6 @@
-<h1>New Product</h1>
-
-<%= render "form" %>
+<div class="col-md-12">
+  <div class="edit-form well">
+    <h1><span class="black">New Product</span></h1>
+    <%= render "form" %>
+  </div>
+</div>
